# rust-magic-gpu

./: Cargo.toml  README.md  build.rs
src/: camera.rs  cameracontroller.rs  lib.rs  main.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
src/engine/: mod.rs  resource.rs  texture.rs
src/engine/renderkit/: gpuhandle.rs  mod.rs  model.rs  pipelinehandle.rs  texture.rs
src/engine/renderkit/bindgroups/: camera.rs  mod.rs  texture.rs
src/engine/renderkit/buffers/: mod.rs  modelvertex.rs
